   * Fix elm_object_item_part_content_set bug with end content in elm_list.
   * Entry: Change the keyboard mode only if the imf is not available. If the
   imf is available, the keyboard mode should be decided by ime, but not entry.
   This prevents the asynchronous states between ime and conformant.
   * Flip : Fix the flip page to not flip on a direction if the direction is disabled.

Removals:

   * All internal widget hooks (and related macros) were removed, due
     to deprecation. Thus, people using that (unstable) API will have
     to adapt themselves.
   * Deprecate elm_label_slide_set(), elm_label_slide_get().
   * Deprecate elm_object_domain_translatable_text_part_set(), elm_object_translatable_text_part_get().
   * Deprecate elm_web_uri_set(), elm_web_uri_get() and "uri,changed" signal for web, web2.
   * Naviframe: Dont' be popped if the event is freezed and popping is going on.
   * Ctxpopup: Apply current ctxpopup style to the list.
   * Popup: Fix the corrupted internal widget tree that caused elm_theme_set() doesn't work correctly.
   * Mapbuf: Ensure that content size calculation is correctly finished because the mapbuf is willing to block the size calculation forcely.

Changes since Elementary 1.0.0:
-------------------------

Additions:

   * Focus can be moved in all directions by elm_widget_focus_go function.
   * Reload theme when it change on disk.
   * Fileselector: Add a wheel spinner that show/spin while EIO is working
   * Add elm_map_overlays_get & elm_map_overlay_visible_get functions.
   * Toolbar: Add elm_toolbar_standard_priority_set/get APIs.
   * Add elm_object_scroll_hold/freeze_get.
   * Add ELM_CALENDAR_LAST_DAY_OF_MONTH enum type
   * Add elm_progressbar_format_function_set API function
   * Add elm_map_overlay_del_cb_set API function
   * Add "changed" signal to the progressbar widgets
   * Use Edje to enable accessibility on TEXTBLOCK.
   * Initialize Emotion when necessary.