@@ -355,7 +355,7 @@ group { name: "elm/spinner/base/default";
             visible: 1;
          }
       }
-      part { name: "access_text";
+      part { name: "access.text";
          type: RECT;
          repeat_events: 1;
          description { state: "default" 0.0;
@@ -518,7 +518,7 @@ group { name: "elm/spinner/base/default";
          target: "right_over1";
          target: "right_over2";
          target: "disabler";
-         target: "access_text";
+         target: "access.text";
          after: "disable_text";
       }
       program { name: "disable_text";
@@ -549,7 +549,7 @@ group { name: "elm/spinner/base/default";
          target: "right_over1";
          target: "right_over2";
          target: "disabler";
-         target: "access_text";
+         target: "access.text";
          after: "enable_text";
       }
       program { name: "enable_text";
@@ -908,7 +908,7 @@ group { name: "elm/spinner/base/vertical";
             visible: 1;
          }
       }
-      part { name: "access_text";
+      part { name: "access.text";
          type: RECT;
          repeat_events: 1;
          description { state: "default" 0.0;
@@ -993,7 +993,7 @@ group { name: "elm/spinner/base/vertical";
          target: "down_bt";
          target: "up_bt";
          target: "disabler";
-         target: "access_text";
+         target: "access.text";
          after: "disable_text";
       }
       program { name: "disable_text";
@@ -1020,7 +1020,7 @@ group { name: "elm/spinner/base/vertical";
          target: "down_bt";
          target: "up_bt";
          target: "disabler";
-         target: "access_text";
+         target: "access.text";
          after: "enable_text";
       }
       program { name: "enable_text";
